<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandymanRegLoginActivity">


    <EditText
        android:id="@+id/handymanEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusHandyman"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/handymanPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/handymanEmail"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInHandyman"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/handymanPassword"
        android:background="@android:color/holo_blue_bright"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/sing_in" />

    <Button
        android:id="@+id/signUpHandyman"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/signInHandyman"
        android:background="@android:color/holo_blue_bright"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/sign_up" />


    <TextView
        android:id="@+id/statusHandyman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/statusHandyman" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signInHandyman"
        android:layout_marginTop="10dp"
        android:text="@string/createQuestion" />

</RelativeLayout>